--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -11,4 +11,4 @@ jobs:
             - uses: gautamkrishnar/blog-post-workflow@master
               with: 
                 max_post_count: "4"
-                feed_list: "https://rss.app/feeds/KIVjlYIaTdHRdFCQ.xml"
+                feed_list: "http://fetchrss.com/rss/62ab396975420861c03f4b1362ab398fb5e5174c0b569e52.xml"
